--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,20 @@
- #mountMiddlewares() {
-    const maxRequestBodySize =
-      global.environment.server.maxRequestBodySize || '100mb'
+#mountMiddlewares() {
+  const maxRequestBodySize =
+    global.environment.server.maxRequestBodySize || '100mb';
 
-    this.#express.use(helmet({ contentSecurityPolicy: false }))
-    this.#express.use(express.json({ limit: maxRequestBodySize }))
-    this.#express.use(
-      express.urlencoded({ limit: maxRequestBodySize, extended: true })
-    )
-    this.#express.use(cors())
+  // Configuração do CORS
+  this.#express.use(cors({
+    origin: '*', // Altere para origens específicas em produção
+    methods: ['GET', 'POST', 'PUT', 'DELETE'],
+    allowedHeaders: ['Content-Type', 'Authorization'],
+  }));
 
-    this.#express.use(requestLogging())
-    this.#express.use(correlationId())
-  }
+  this.#express.use(helmet({ contentSecurityPolicy: false }));
+  this.#express.use(express.json({ limit: maxRequestBodySize }));
+  this.#express.use(
+    express.urlencoded({ limit: maxRequestBodySize, extended: true })
+  );
+
+  this.#express.use(requestLogging());
+  this.#express.use(correlationId());
+}
