--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,19 @@
-Lord
+Dear DevOps Team,
 
- 
+I hope this email finds you well.
 
-Please create the following address in the Kong of the Fee Management project in the Dev environment:
+I’m reaching out to request your assistance in enabling the following route in Kong for the Fee Management project in the Dev environment. This is required to address a CORS issue that is affecting the functionality of our application.
 
- 
+Details:
+Service: fee-management-backend
+Name/ID: fee-management-backend
+Path: /v1/fee/group
+Method: GET
+We believe enabling this route will resolve the current issue and ensure seamless integration with the frontend.
 
-· Service: fee-management-backend
+Please let me know if you need any further details or configurations from our side. Your prompt assistance on this matter would be greatly appreciated.
 
- 
-
-· Name/ID: fee-management-backend
-
- 
-
-· Path: /v1/fee/group
-
- 
-
-· Method: GET
-
- 
-
- 
-
-Best regards
+Best regards,
+[Your Name]
+[Your Position]
+[Your Contact Information]
