--- a/.gitignore
+++ b/.gitignore
@@ -1,118 +1,18 @@
-import dotenv from 'dotenv'
-import path from 'path'
-import fs from 'fs'
-import configServer from 'nice-cloud-config-client'
+import environment from '#core/config/environment.js';
 
-import environment from './environment.js'
-import { createLogger } from '#core/logging/index.js'
-import { configureEnvironmentConfigServer } from './configureEnvironment.js'
+export default async function feeScheduleGetEndpoint(req, res) {
+  try {
+    const { type } = req.params;
 
-export default class Config {
-  #env
-  #logger
-
-  constructor(env = process.env.NODE_ENV) {
-    this.#env = env || 'Local'
-    this.#logger = createLogger(environment)
-  }
-
-  async bootstrap() {
-    this.#logger.info(`Starting configuration for env: ${this.#env}`)
-
-    const strategies = new Map()
-    strategies.set('local', this.#loadEnvFromFile.bind(this))
-    strategies.set('development', this.#loadFromConfigServer.bind(this))
-    strategies.set('staging', this.#loadFromConfigServer.bind(this))
-    strategies.set('production', this.#loadFromConfigServer.bind(this))
-
-    const strategyForEnvironment = strategies.get(this.#env.toLocaleLowerCase())
-    const environmentWithValues = await strategyForEnvironment()
-
-    Object.freeze(environmentWithValues)
-
-    // Create a new logger using the final configuration
-    this.#logger = createLogger(environmentWithValues)
-
-    return environmentWithValues
-  }
-
-  logger() {
-    return this.#logger
-  }
-
-  async #loadEnvFromFile() {
-    const envFile = '.env'
-    const envPath = path.resolve(path.dirname(''), envFile)
-
-    this.#logger.info(`Loading env using file ${envPath}`)
-
-    if (fs.existsSync(envPath)) {
-      dotenv.config({ path: envPath })
+    // Acessando as URLs diretamente do environment
+    const scheduleUrls = environment[this.#env]?.scheduleUrls;
+    if (!scheduleUrls[type]) {
+      return res.status(400).json({ error: 'Invalid schedule type' });
     }
 
-    environment.app.name = process.env.APP_NAME
-    environment.server.port = process.env.SERVER_PORT
-    environment.server.maxRequestBodySize =
-      process.env.SERVER_MAX_REQUEST_BODY_SIZE
-    environment.logging.level = process.env.LOGGING_LEVEL
-    environment.kafka.brokers = process.env.KAFKA_BROKERS?.split(',')
-    environment.rabbitmq.url = process.env.RABBITMQ_URL
-    environment.mongo.uri = process.env.MONGODB_URI
-    environment.caseUrl = process.env.CASE_URL
-    environment.conductorUrl = process.env.CONDUCTOR_URL
-    environment.sqlserver.server = process.env.SQLSERVER_SERVER
-    environment.sqlserver.user = process.env.SQLSERVER_USER
-    environment.sqlserver.password = process.env.SQLSERVER_PASSWORD
-    environment.sqlserver.database = process.env.SQLSERVER_DATABASE
-
-    return environment
-  }
-
-  async #loadFromConfigServer() {
-    const configServerAppName = process.env.CONFIG_SERVER_APP_NAME
-    const configServerUrl = process.env.CONFIG_SERVER_URL
-    const configServerUser = process.env.CONFIG_SERVER_USER
-    const configServerPassword = process.env.CONFIG_SERVER_PASSWORD
-
-    if (!configServerAppName) {
-      throw new Error('Application name must be provided')
-    }
-
-    if (!configServerUrl) {
-      throw new Error('Config server url must be provided')
-    }
-
-    if (!configServerUser) {
-      throw new Error('Config server user must be provided')
-    }
-
-    if (!configServerPassword) {
-      throw new Error('Config server password must be provided')
-    }
-
-    this.#logger.info(`Loading env using config server ${configServerUrl}`)
-
-    const configuration = await configServer.load({
-      rejectUnauthorized: false,
-      name: configServerAppName,
-      endpoint: configServerUrl,
-      profiles: this.#env,
-      auth: {
-        user: configServerUser,
-        pass: configServerPassword
-      }
-    })
-
-    if (configuration instanceof Error) {
-      throw configuration
-    }
-
-    return configureEnvironmentConfigServer(
-      environment,
-      configuration.properties,
-      '.',
-      configuration
-    )
+    const url = scheduleUrls[type];
+    res.status(200).json({ url });
+  } catch (error) {
+    res.status(500).json({ error: 'Internal Server Error' });
   }
 }
-
