--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,17 @@
-DanielG@NYDEVVDI0027 MINGW64 /h/Documents/fee-management-backend (feat/schedulePdf-T615)
-$ git commit -m "schedule"
-'\\safra-pdc\sys\USERS\DanielG\Documents\fee-management-backend'
-CMD.EXE was started with the above path as the current directory.
-UNC paths are not supported.  Defaulting to Windows directory.
-\\safra-pdc\sys\USERS\DanielG\Documents\fee-management-backend\node_modules\@commitlint\cli\lib\cli.js:123
-        throw err;
-        ^
-
-TypeError: Could not find git root from C:\Windows
-    at getEditCommit (\\safra-pdc\sys\USERS\DanielG\Documents\fee-management-backend\node_modules\@commitlint\read\lib\get-edit-commit.js:14:15)
-    at async main (\\safra-pdc\sys\USERS\DanielG\Documents\fee-management-backend\node_modules\@commitlint\cli\lib\cli.js:168:19)
-husky - commit-msg hook exited with code 1 (error)
+[core]
+        repositoryformatversion = 0
+        filemode = false
+        bare = false
+        logallrefupdates = true
+        symlinks = false
+        ignorecase = true
+        hooksPath = .husky
+[remote "origin"]
+        url = git@gitlab2.devops.k8s.safra.int:snb/conductor-project/fee-management/fee-management-backend.git
+        fetch = +refs/heads/*:refs/remotes/origin/*
+[branch "develop"]
+        remote = origin
+        merge = refs/heads/develop        
+        vscode-merge-base = origin/develop
+[branch "feat/schedulePdf-T615"]
+        vscode-merge-base = origin/develop
