--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,13 @@
-[core]
-        repositoryformatversion = 0
-        filemode = false
-        bare = false
-        logallrefupdates = true
-        symlinks = false
-        ignorecase = true
-        hooksPath = .husky
-[remote "origin"]
-        url = git@gitlab2.devops.k8s.safra.int:snb/conductor-project/fee-management/fee-management-backend.git
-        fetch = +refs/heads/*:refs/remotes/origin/*
-[branch "develop"]
-        remote = origin
-        merge = refs/heads/develop        
-        vscode-merge-base = origin/develop
-[branch "feat/schedulePdf-T615"]
-        vscode-merge-base = origin/develop
+[13:09:06.913] INFO (22264): Starting configuration for env: Local
+[13:09:06.914] INFO (22264): Loading env using file H:\Documents\fee-management-backend\.env
+[13:09:06.918] INFO (22264): bootstraping application
+MongooseError: The `uri` parameter to `openUri()` must be a string, got "undefined". Make sure the first parameter to `mongoose.connect()` or `mongoose.createConnection()` is a string.
+    at _createMongoClient (H:\Documents\fee-management-backend\node_modules\mongoose\lib\connection.js:768:11)
+    at NativeConnection.openUri (H:\Documents\fee-management-backend\node_modules\mongoose\lib\connection.js:705:29)
+    at Mongoose.connect (H:\Documents\fee-management-backend\node_modules\mongoose\lib\index.js:406:15)
+    at startConnectionWithMongoDb (file:///H:/Documents/fee-management-backend/src/core/data/index.js:8:31)
+    at ApiServer.#bootstrap (file:///H:/Documents/fee-management-backend/src/app/api/apiServer.js:113:5)
+    at ApiServer.launch (file:///H:/Documents/fee-management-backend/src/app/api/apiServer.js:122:26)
+    at App.run (file:///H:/Documents/fee-management-backend/src/app/app.js:18:20)
+    at file:///H:/Documents/fee-management-backend/src/app/api/index.js:6:13
+[13:09:07.300] INFO (22264): Server started on :::undefined
