--- a/.gitignore
+++ b/.gitignore
@@ -1,119 +1,19 @@
-import dotenv from 'dotenv'
-import path from 'path'
-import fs from 'fs'
-import configServer from 'nice-cloud-config-client'
-
-import environment from './environment.js'
-import { createLogger } from '#core/logging/index.js'
-import { configureEnvironmentConfigServer } from './configureEnvironment.js'
-
-export default class Config {
-  #env
-  #logger
-
-  constructor(env = process.env.NODE_ENV) {
-    this.#env = env || 'Local'
-    this.#logger = createLogger(environment)
-  }
-
-  async bootstrap() {
-    this.#logger.info(`Starting configuration for env: ${this.#env}`)
-
-    const strategies = new Map()
-    strategies.set('local', this.#loadFromConfigServer.bind(this))
-    // strategies.set('local', this.#loadEnvFromFile.bind(this))
-    strategies.set('development', this.#loadFromConfigServer.bind(this))
-    strategies.set('staging', this.#loadFromConfigServer.bind(this))
-    strategies.set('production', this.#loadFromConfigServer.bind(this))
-
-    const strategyForEnvironment = strategies.get(this.#env.toLocaleLowerCase())
-    const environmentWithValues = await strategyForEnvironment()
-
-    Object.freeze(environmentWithValues)
-
-    // Create a new logger using the final configuration
-    this.#logger = createLogger(environmentWithValues)
-
-    return environmentWithValues
-  }
-
-  logger() {
-    return this.#logger
-  }
-
-  async #loadEnvFromFile() {
-    const envFile = '.env'
-    const envPath = path.resolve(path.dirname(''), envFile)
-
-    this.#logger.info(`Loading env using file ${envPath}`)
-
-    if (fs.existsSync(envPath)) {
-      dotenv.config({ path: envPath })
-    }
-
-    environment.app.name = process.env.APP_NAME
-    environment.server.port = process.env.SERVER_PORT
-    environment.server.maxRequestBodySize =
-      process.env.SERVER_MAX_REQUEST_BODY_SIZE
-    environment.logging.level = process.env.LOGGING_LEVEL
-    environment.kafka.brokers = process.env.KAFKA_BROKERS?.split(',')
-    environment.rabbitmq.url = process.env.RABBITMQ_URL
-    environment.mongo.uri = process.env.MONGODB_URI
-    environment.caseUrl = process.env.CASE_URL
-    environment.conductorUrl = process.env.CONDUCTOR_URL
-    environment.sqlserver.server = process.env.SQLSERVER_SERVER
-    environment.sqlserver.user = process.env.SQLSERVER_USER
-    environment.sqlserver.password = process.env.SQLSERVER_PASSWORD
-    environment.sqlserver.database = process.env.SQLSERVER_DATABASE
-    
-
-    return environment
-  }
-
-  async #loadFromConfigServer() {
-    const configServerAppName = process.env.CONFIG_SERVER_APP_NAME
-    const configServerUrl = process.env.CONFIG_SERVER_URL
-    const configServerUser = process.env.CONFIG_SERVER_USER
-    const configServerPassword = process.env.CONFIG_SERVER_PASSWORD
-
-    if (!configServerAppName) {
+file:///H:/Documents/fee-management-backend/src/core/config/index.js:80
       throw new Error('Application name must be provided')
-    }
+            ^
 
-    if (!configServerUrl) {
-      throw new Error('Config server url must be provided')
-    }
+Error: Application name must be provided
+    at Config.#loadFromConfigServer (file:///H:/Documents/fee-management-backend/src/core/config/index.js:80:13)
+    at Config.bootstrap (file:///H:/Documents/fee-management-backend/src/core/config/index.js:30:41)
+    at App.bootstrap (file:///H:/Documents/fee-management-backend/src/app/app.js:11:38)
+    at file:///H:/Documents/fee-management-backend/src/app/api/index.js:5:13
+    at file:///H:/Documents/fee-management-backend/src/app/api/index.js:7:3
+    at ModuleJob.run (node:internal/modules/esm/module_job:193:25)
+    at async Promise.all (index 0)
+    at async ESMLoader.import (node:internal/modules/esm/loader:526:24)
+    at async loadESM (node:internal/process/esm_loader:91:5)
+    at async handleMainPromise (node:internal/modules/run_main:65:12)
+[15:24:06.886] INFO (24932): Starting configuration for env: Local
+[nodemon] app crashed - waiting for file changes before starting...
 
-    if (!configServerUser) {
-      throw new Error('Config server user must be provided')
-    }
 
-    if (!configServerPassword) {
-      throw new Error('Config server password must be provided')
-    }
-
-    this.#logger.info(`Loading env using config server ${configServerUrl}`)
-
-    const configuration = await configServer.load({
-      rejectUnauthorized: false,
-      name: configServerAppName,
-      endpoint: configServerUrl,
-      profiles: this.#env,
-      auth: {
-        user: configServerUser,
-        pass: configServerPassword
-      }
-    })
-
-    if (configuration instanceof Error) {
-      throw configuration
-    }
-
-    return configureEnvironmentConfigServer(
-      environment,
-      configuration.properties,
-      '.',
-      configuration
-    )
-  }
-}
